--- a/app/src/main/res/layout/item_handing.xml
+++ b/app/src/main/res/layout/item_handing.xml
@@ -20,7 +20,7 @@
         android:id="@+id/line_item_handing_1"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_1"
-        android:layout_below="@+id/tv_item_handing_number"
+        android:layout_below="@+id/tv_item_handing_content_title"
         android:layout_marginTop="@dimen/dp_8"
         android:background="@color/color_cut_line" />
 
@@ -53,14 +53,76 @@
         android:layout_marginTop="@dimen/dp_8"
         android:text="TextView" />
 
+    <!--<TextView-->
+    <!--android:id="@+id/tv_item_handing_number"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignLeft="@+id/tv_item_handing_id"-->
+    <!--android:layout_alignStart="@+id/tv_item_handing_id"-->
+    <!--android:layout_below="@+id/tv_item_handing_id"-->
+    <!--android:textColor="@color/colorAccent"-->
+    <!--android:text="TextView" />-->
+
     <TextView
-        android:id="@+id/tv_item_handing_number"
+        android:id="@+id/tv_item_handing_content_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/tv_item_handing_id"
         android:layout_alignStart="@+id/tv_item_handing_id"
         android:layout_below="@+id/tv_item_handing_id"
-        android:text="TextView" />
+        android:text="安装：" />
+
+    <TextView
+        android:id="@+id/tv_item_handing_content_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tv_item_handing_content_title"
+        android:layout_below="@+id/tv_item_handing_id"
+        android:layout_toEndOf="@+id/tv_item_handing_content_title"
+        android:layout_toRightOf="@+id/tv_item_handing_content_title"
+        android:text="@string/wire" />
+
+    <TextView
+        android:id="@+id/tv_item_handing_content_wire"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tv_item_handing_content_1"
+        android:layout_marginLeft="@dimen/dp_4"
+        android:layout_marginRight="@dimen/dp_4"
+        android:layout_toEndOf="@+id/tv_item_handing_content_1"
+        android:layout_toRightOf="@+id/tv_item_handing_content_1"
+        android:text="0"
+        android:textColor="@color/colorBlueTheme" />
+
+    <TextView
+        android:id="@+id/tv_item_handing_content_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tv_item_handing_content_wire"
+        android:layout_toEndOf="@+id/tv_item_handing_content_wire"
+        android:layout_toRightOf="@+id/tv_item_handing_content_wire"
+        android:text="@string/ge_middle" />
+
+    <TextView
+        android:id="@+id/tv_item_handing_content_wireless"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tv_item_handing_content_2"
+        android:layout_marginLeft="@dimen/dp_4"
+        android:layout_marginRight="@dimen/dp_4"
+        android:layout_toEndOf="@+id/tv_item_handing_content_2"
+        android:layout_toRightOf="@+id/tv_item_handing_content_2"
+        android:text="0"
+        android:textColor="@color/colorBlueTheme" />
+
+    <TextView
+        android:id="@+id/tv_item_handing_content_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tv_item_handing_content_wireless"
+        android:layout_toEndOf="@+id/tv_item_handing_content_wireless"
+        android:layout_toRightOf="@+id/tv_item_handing_content_wireless"
+        android:text="@string/ge" />
 
     <LinearLayout
         android:id="@+id/ll_item_handing_"
@@ -121,12 +183,12 @@
         android:id="@+id/tv_item_handing_modify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dp_8"
         android:layout_alignTop="@+id/tv_item_handing_time"
+        android:layout_marginLeft="@dimen/dp_8"
         android:layout_toEndOf="@+id/tv_item_handing_time"
         android:layout_toRightOf="@+id/tv_item_handing_time"
-        android:visibility="gone"
         android:text="@string/modify"
-        android:textColor="@color/colorRed"/>
+        android:textColor="@color/colorRed"
+        android:visibility="gone" />
 
 </RelativeLayout>
