--- a/app/src/main/res/layout/item_handled.xml
+++ b/app/src/main/res/layout/item_handled.xml
@@ -46,12 +46,64 @@
         android:text="TextView" />
 
     <TextView
-        android:id="@+id/tv_item_handled_number"
+        android:id="@+id/tv_item_handled_content_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/tv_item_handled_id"
         android:layout_alignStart="@+id/tv_item_handled_id"
         android:layout_below="@+id/tv_item_handled_id"
-        android:text="TextView" />
+        android:text="安装：" />
+
+    <TextView
+        android:id="@+id/tv_item_handled_content_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tv_item_handled_content_title"
+        android:layout_toEndOf="@+id/tv_item_handled_content_title"
+        android:layout_toRightOf="@+id/tv_item_handled_content_title"
+        android:layout_below="@+id/tv_item_handled_id"
+        android:text="@string/wire" />
+
+    <TextView
+        android:id="@+id/tv_item_handled_content_wire"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tv_item_handled_content_1"
+        android:layout_marginLeft="@dimen/dp_4"
+        android:layout_marginRight="@dimen/dp_4"
+        android:layout_toEndOf="@+id/tv_item_handled_content_1"
+        android:layout_toRightOf="@+id/tv_item_handled_content_1"
+        android:text="0"
+        android:textColor="@color/colorBlueTheme" />
+
+    <TextView
+        android:id="@+id/tv_item_handled_content_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tv_item_handled_content_wire"
+        android:layout_toEndOf="@+id/tv_item_handled_content_wire"
+        android:layout_toRightOf="@+id/tv_item_handled_content_wire"
+        android:text="@string/ge_middle" />
+
+    <TextView
+        android:id="@+id/tv_item_handled_content_wireless"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tv_item_handled_content_2"
+        android:layout_marginLeft="@dimen/dp_4"
+        android:layout_marginRight="@dimen/dp_4"
+        android:layout_toEndOf="@+id/tv_item_handled_content_2"
+        android:layout_toRightOf="@+id/tv_item_handled_content_2"
+        android:text="0"
+        android:textColor="@color/colorBlueTheme" />
+
+    <TextView
+        android:id="@+id/tv_item_handled_content_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tv_item_handled_content_wireless"
+        android:layout_toEndOf="@+id/tv_item_handled_content_wireless"
+        android:layout_toRightOf="@+id/tv_item_handled_content_wireless"
+        android:text="@string/ge" />
 
 </RelativeLayout>
