--- a/app/src/main/res/layout/activity_operate_install.xml
+++ b/app/src/main/res/layout/activity_operate_install.xml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.tianyigps.xiepeng.activity.OperateInstallActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <include
+        layout="@layout/layout_activity_operate_install_head"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_16"
+        android:background="@color/color_cut_line"/>
+
+    <ListView
+        android:id="@+id/lv_activity_operate_install"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+</LinearLayout>
