--- a/app/src/main/res/layout/layout_load_more.xml
+++ b/app/src/main/res/layout/layout_load_more.xml
@@ -8,8 +8,9 @@
 
     <ProgressBar
         android:id="@+id/pb_layout_load_more"
-        android:layout_width="@dimen/dp_40"
-        android:layout_height="@dimen/dp_40"/>
+        android:layout_width="@dimen/dp_32"
+        android:layout_height="@dimen/dp_32"
+        />
 
     <TextView
         android:id="@+id/tv_layout_load_more"
