--- a/app/src/main/res/layout/item_operate_install_listview.xml
+++ b/app/src/main/res/layout/item_operate_install_listview.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/rl_item_operate_install_list"
@@ -11,7 +11,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dp_8"
         android:background="@drawable/bg_item"
+        android:descendantFocusability="beforeDescendants"
         android:elevation="@dimen/dp_4">
+        <requestFocus/>
 
         <TextView
             android:id="@+id/tv_item_operate_install_state"
@@ -29,7 +31,7 @@
             android:paddingRight="@dimen/dp_16"
             android:paddingTop="@dimen/dp_8"
             android:text="@string/repair_replace"
-            android:textColor="@color/colorWhite" />
+            android:textColor="@color/colorWhite"/>
 
         <RelativeLayout
             android:id="@+id/rl_item_operate_install_old"
@@ -44,7 +46,7 @@
                 android:layout_width="@dimen/dp_40"
                 android:layout_height="@dimen/dp_40"
                 android:padding="@dimen/dp_8"
-                android:src="@drawable/ic_device_no" />
+                android:src="@drawable/ic_device_no"/>
 
             <TextView
                 android:id="@+id/tv_item_operate_install_old_device_no_title"
@@ -53,7 +55,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_toEndOf="@+id/iv_item_operate_install_old"
                 android:layout_toRightOf="@+id/iv_item_operate_install_old"
-                android:text="旧设备号" />
+                android:text="旧设备号"/>
 
             <TextView
                 android:id="@+id/tv_item_operate_install_old_device_no"
@@ -66,7 +68,7 @@
                 android:layout_toRightOf="@+id/iv_item_operate_install_old"
                 android:lines="1"
                 android:maxWidth="@dimen/dp_240"
-                android:textSize="@dimen/sp_14" />
+                android:textSize="@dimen/sp_14"/>
 
 
         </RelativeLayout>
@@ -76,17 +78,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/rl_item_operate_install_old"
-            android:layout_marginTop="@dimen/dp_16"
-            android:descendantFocusability="beforeDescendants"
             android:focusable="true"
-            android:focusableInTouchMode="true">
+            android:focusableInTouchMode="true"
+            android:layout_marginTop="@dimen/dp_16"
+            >
 
             <ImageView
                 android:id="@+id/iv_item_operate_install_new"
                 android:layout_width="@dimen/dp_40"
                 android:layout_height="@dimen/dp_40"
                 android:padding="@dimen/dp_8"
-                android:src="@drawable/ic_device_no" />
+                android:src="@drawable/ic_device_no"/>
 
             <TextView
                 android:id="@+id/tv_item_operate_install_new_device_no_title"
@@ -95,7 +97,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_toEndOf="@+id/iv_item_operate_install_new"
                 android:layout_toRightOf="@+id/iv_item_operate_install_new"
-                android:text="新设备号" />
+                android:text="新设备号"/>
 
             <EditText
                 android:id="@+id/et_item_operate_new_device_no"
@@ -110,7 +112,7 @@
                 android:hint="请输入设备号（至少6位）"
                 android:lines="1"
                 android:maxWidth="@dimen/dp_240"
-                android:textSize="@dimen/sp_14" />
+                android:textSize="@dimen/sp_14"/>
 
             <ImageView
                 android:id="@+id/iv_item_operate_install_new_locate"
@@ -119,7 +121,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:padding="@dimen/dp_8"
-                android:src="@drawable/ic_address" />
+                android:src="@drawable/ic_address"/>
 
             <ImageView
                 android:id="@+id/iv_item_operate_install_new_scanner"
@@ -128,7 +130,7 @@
                 android:layout_toLeftOf="@+id/iv_item_operate_install_new_locate"
                 android:layout_toStartOf="@+id/iv_item_operate_install_new_locate"
                 android:padding="@dimen/dp_8"
-                android:src="@drawable/ic_scanner" />
+                android:src="@drawable/ic_scanner"/>
 
             <View
                 android:layout_width="match_parent"
@@ -137,7 +139,7 @@
                 android:layout_marginLeft="@dimen/dp_40"
                 android:layout_marginStart="@dimen/dp_40"
                 android:layout_marginTop="@dimen/dp_8"
-                android:background="@color/colorBlueTheme" />
+                android:background="@color/colorBlueTheme"/>
         </RelativeLayout>
 
         <TextView
@@ -149,7 +151,7 @@
             android:layout_marginStart="@dimen/dp_40"
             android:text="@string/tip_imei"
             android:textColor="@color/colorOrange"
-            android:visibility="gone" />
+            android:visibility="gone"/>
 
         <ImageView
             android:id="@+id/iv_item_operate_install_position"
@@ -160,7 +162,7 @@
             android:layout_below="@+id/rl_item_operate_install_new"
             android:layout_marginTop="@dimen/dp_16"
             android:padding="@dimen/dp_8"
-            android:src="@drawable/ic_place" />
+            android:src="@drawable/ic_place"/>
 
         <TextView
             android:id="@+id/tv_item_operate_install_position_title"
@@ -169,7 +171,7 @@
             android:layout_alignTop="@+id/iv_item_operate_install_position"
             android:layout_toEndOf="@+id/iv_item_operate_install_position"
             android:layout_toRightOf="@+id/iv_item_operate_install_position"
-            android:text="@string/install_place" />
+            android:text="@string/install_place"/>
 
         <EditText
             android:id="@+id/et_item_operate_install_position"
@@ -184,7 +186,9 @@
             android:hint="@string/enter_install_place"
             android:lines="1"
             android:maxWidth="@dimen/dp_240"
-            android:textSize="@dimen/sp_14" />
+            android:textSize="@dimen/sp_14">
+            <!--<requestFocus/>-->
+        </EditText>
 
         <ImageView
             android:id="@+id/iv_item_operate_install_position_pic"
@@ -193,7 +197,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignTop="@+id/tv_item_operate_install_position_title"
-            android:src="@drawable/ic_camera" />
+            android:src="@drawable/ic_camera"/>
 
         <ImageView
             android:id="@+id/iv_item_operate_install_position_pic_delete"
@@ -206,7 +210,7 @@
             android:background="@drawable/bg_cycle_delete"
             android:padding="@dimen/dp_4"
             android:src="@drawable/ic_delete"
-            android:visibility="gone" />
+            android:visibility="gone"/>
 
         <View
             android:id="@+id/view_item_operate_install_line_3"
@@ -216,7 +220,7 @@
             android:layout_marginLeft="@dimen/dp_40"
             android:layout_marginStart="@dimen/dp_40"
             android:layout_marginTop="@dimen/dp_4"
-            android:background="@color/colorBlueTheme" />
+            android:background="@color/colorBlueTheme"/>
 
         <TextView
             android:id="@+id/tv_item_operate_install_tip_2"
@@ -227,7 +231,7 @@
             android:layout_marginStart="@dimen/dp_40"
             android:text="@string/tip_position"
             android:textColor="@color/colorOrange"
-            android:visibility="gone" />
+            android:visibility="gone"/>
 
         <RelativeLayout
             android:id="@+id/rl_item_operate_install_install"
@@ -246,7 +250,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:padding="@dimen/dp_8"
-                android:src="@drawable/ic_connection" />
+                android:src="@drawable/ic_connection"/>
 
             <TextView
                 android:id="@+id/tv_item_operate_install_install"
@@ -256,7 +260,7 @@
                 android:layout_toEndOf="@+id/iv_item_operate_install_install"
                 android:layout_toRightOf="@+id/iv_item_operate_install_install"
                 android:gravity="center"
-                android:text="@string/install_pic" />
+                android:text="@string/install_pic"/>
 
             <TextView
                 android:id="@+id/tv_item_operate_install_tip_3"
@@ -268,7 +272,7 @@
                 android:layout_marginTop="@dimen/dp_8"
                 android:text="@string/tip_pic"
                 android:textColor="@color/colorOrange"
-                android:visibility="gone" />
+                android:visibility="gone"/>
 
             <ImageView
                 android:id="@+id/iv_item_operate_install_install_pic"
@@ -277,7 +281,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignTop="@+id/iv_item_operate_install_install"
-                android:src="@drawable/ic_camera" />
+                android:src="@drawable/ic_camera"/>
 
         </RelativeLayout>
 
@@ -292,7 +296,7 @@
             android:background="@drawable/bg_cycle_delete"
             android:padding="@dimen/dp_4"
             android:src="@drawable/ic_delete"
-            android:visibility="visible" />
+            android:visibility="visible"/>
     </RelativeLayout>
 
 </FrameLayout>
