--- a/app/src/main/res/layout/layout_activity_installing_next.xml
+++ b/app/src/main/res/layout/layout_activity_installing_next.xml
@@ -10,7 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_margin="@dimen/dp_8"
+        android:layout_marginTop="@dimen/dp_16"
+        android:layout_marginBottom="@dimen/dp_64"
         android:background="@drawable/bg_flush"
         android:paddingLeft="@dimen/dp_72"
         android:paddingRight="@dimen/dp_72"
