--- a/app/src/main/res/layout/item_pending.xml
+++ b/app/src/main/res/layout/item_pending.xml
@@ -49,7 +49,7 @@
         android:id="@+id/tv_item_pending_content_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ll_item_pending_remove"
+        android:layout_below="@+id/ll_item_pending_remove_complete"
         android:layout_marginLeft="@dimen/dp_8"
         android:layout_marginStart="@dimen/dp_8"
         android:text="安装："/>
@@ -107,10 +107,66 @@
         android:text="@string/ge"/>
 
     <LinearLayout
+        android:id="@+id/ll_item_pending_install_complete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_item_pending_content_title"
+        android:visibility="visible"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_item_pending_install_content_title_complete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_8"
+            android:layout_marginStart="@dimen/dp_8"
+            android:paddingLeft="31dp"
+            android:paddingStart="31dp"
+            android:text="完成："/>
+
+        <TextView
+            android:id="@+id/tv_item_pending_install_content_1_complete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/wire"/>
+
+        <TextView
+            android:id="@+id/tv_item_pending_install_content_wire_complete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_4"
+            android:layout_marginRight="@dimen/dp_4"
+            android:text="0"
+            android:textColor="@color/colorBlueTheme"/>
+
+        <TextView
+            android:id="@+id/tv_item_pending_install_content_2_complete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ge_middle"/>
+
+        <TextView
+            android:id="@+id/tv_item_pending_install_content_wireless_complete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_4"
+            android:layout_marginRight="@dimen/dp_4"
+            android:text="0"
+            android:textColor="@color/colorBlueTheme"/>
+
+        <TextView
+            android:id="@+id/tv_item_pending_install_content_3_complete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ge"/>
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/ll_item_pending_remove"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_item_pending_id"
+        android:visibility="visible"
         android:orientation="horizontal">
 
         <TextView
@@ -159,10 +215,65 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ll_item_pending_remove_complete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/ll_item_pending_remove"
+        android:visibility="gone"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_item_pending_remove_content_title_complete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_8"
+            android:layout_marginStart="@dimen/dp_8"
+            android:paddingLeft="31dp"
+            android:paddingStart="31dp"
+            android:text="完成："/>
+
+        <TextView
+            android:id="@+id/tv_item_pending_remove_content_1_complete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/wire"/>
+
+        <TextView
+            android:id="@+id/tv_item_pending_remove_content_wire_complete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_4"
+            android:layout_marginRight="@dimen/dp_4"
+            android:text="0"
+            android:textColor="@color/colorBlueTheme"/>
+
+        <TextView
+            android:id="@+id/tv_item_pending_remove_content_2_complete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ge_middle"/>
+
+        <TextView
+            android:id="@+id/tv_item_pending_remove_content_wireless_complete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_4"
+            android:layout_marginRight="@dimen/dp_4"
+            android:text="0"
+            android:textColor="@color/colorBlueTheme"/>
+
+        <TextView
+            android:id="@+id/tv_item_pending_remove_content_3_complete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ge"/>
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/ll_item_pending_modify"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_item_pending_content_title"
+        android:layout_below="@id/ll_item_pending_install_complete"
         android:layout_marginLeft="@dimen/dp_8"
         android:layout_marginStart="@dimen/dp_8"
         android:layout_marginTop="@dimen/dp_8"
@@ -187,6 +298,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/ll_item_pending_modify"
+        android:visibility="gone"
         android:layout_marginLeft="@dimen/dp_8"
         android:layout_marginStart="@dimen/dp_8"
         android:layout_marginTop="@dimen/dp_8">
@@ -232,6 +344,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/rl_item_pending_contact"
+        android:visibility="gone"
         android:layout_marginLeft="@dimen/dp_8"
         android:layout_marginStart="@dimen/dp_8"
         android:layout_marginTop="@dimen/dp_8"
